Remove unnecessary imports / simplify assertions